samples/_failures_safe/1761794991_df3278_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13c720c6.c: In function ‘topologicalSortUtil’:
./samples/SAFE/__tmp_13c720c6.c:141:5: error: expected expression at end of input
  141 |     for (int i = 0; i < graph->vertices;
      |     ^~~
./samples/SAFE/__tmp_13c720c6.c:141:5: error: expected declaration or statement at end of input
